--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
 file.reference.mysql-connector-java-5.1.45.jar=D:\\01.Kuliah\\4.Semester 4\\01. Provis\\lib\\mysql-connector-java-5.1.45.jar
-user.properties.file=/Users/radhikayusuf/Library/Application Support/NetBeans/8.2/build.properties
+user.properties.file=C:\\Users\\Young\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
